update and review in tcc

--- a/template-tcc1/editaveis/consideracoes.tex
+++ b/template-tcc1/editaveis/consideracoes.tex
@@ -4,14 +4,15 @@
 
 \subsection{Flutter}
 
-O Fluter é um kit de ferramenas de interface de usuário(UI) grátis e open-souce criado pela Google e lançado em 2017. Ele auxilia na criação de aplicaivos nativos para dispositivos mobile, web e desktop a partir de uma única base de código.Isso significa que é possível criar uma aplicação para diferentes sistemas operacionais(IOS e Android) utilizando um unico código.
+O Fluter é um kit de ferramenas de interface de usuário(UI) grátis e open-souce criado pela Google e lançado em 2017. Ele auxilia na criação de aplicaivos nativos para dispositivos mobile, web e desktop a partir de uma única base de código. Isso significa que é possível criar uma aplicação para diferentes sistemas operacionais(IOS e Android) utilizando um unico código.
 
-
-Ele é composto por um SDK(Software Development Kit) e um frameword. O SDK é uma coleção de ferramentas que ajudam o desenvolvedor desenvolver a aplicação e executá-la em plataformas específicas. Essas ferramentas incluem bibliotecas, documentação, exemplos de códigos, processos, guias, compiladores, entre outras coisas. Já o framework é uma coleção de elementos da UI que são reutilizaveis e podem ser personalizados para as necessidades expecíficas da aplicação
+Ele é composto por um SDK(Software Development Kit) e um framework. O SDK é uma coleção de ferramentas que ajudam o desenvolvedor a desenvolver a aplicação e executá-la em plataformas específicas. Essas ferramentas incluem bibliotecas, documentação, exemplos de códigos, processos, guias, compiladores, entre outras coisas. Já o framework é uma coleção de elementos da UI que são reutilizaveis e podem ser personalizados para as necessidades expecíficas da aplicação
 
 \subsubsection{Dart}
 
 Dart é a linguagem de programação utilizada no flutter e também foi criada pela Google em 2011. É uma linguagem focada para desenvolvimento front-end e do tipo orientada a objeto.
+
+\subsubsection{Firebase}
 
 \section{Engenharia de Software}
 
@@ -20,6 +21,8 @@ Dart é a linguagem de programação utilizada no flutter e também foi criada p
 \subsubsection{Trello}
 
 A ferramento Trello3 possibilita de modo fácil, gratuito e flexível o gerenciamento de projetos (TRELLO, 2017). O Trello auxilia no ganho de produtividade tanto por equipes grandes quanto de forma individual. Baseia-se no sistema de kanban4, bastante utilizado no desenvolvimento com Scrum, metodologia utilizada neste traballho (TRELLO,2017). O Trello foi utilizado para organizar as tarefas envolvidas durante a pesquisa, desenvolvimento e escrita deste trabalho.
+
+\subsubsection{ZenHub}
 
 \subsubsection{Slack}
 
