--- a/template-tcc1/editaveis/introducao.tex
+++ b/template-tcc1/editaveis/introducao.tex
@@ -2,7 +2,7 @@
 
 \section{Contextualização}
 
-O ciclo menstrual feminino começou a ser pesquisado, cientificamente, na década de 1930 \cite{frank1931} e em 1973 Barbara Sommer revisou toda a lieratura existente e concluiu, naquela época, que não existia evidencias que a fase do ciclo menstrual influenciava em mudanças na cognição e performance motora por causa problemas na metodolodia. Com o avanço da ciência e da medicina, métodos cada vez mais sofisicados e acessíveis para análise hormonal possibilitaram o avanço dos estudos nessa área que ainda intriga muios cientistas da medicina, psicologia e a sociedade em geral.
+O ciclo menstrual feminino começou a ser pesquisado, cientificamente, na década de 1930 \cite{frank1931} e em 1973 Barbara Sommer revisou toda a lieratura existente e concluiu, naquela época, que não existia evidencias que a fase do ciclo menstrual influenciava em mudanças na cognição e performance motora por causa de problemas na metodolodia. Com o avanço da ciência e da medicina, métodos cada vez mais sofisicados e acessíveis para análise hormonal possibilitaram o avanço dos estudos nessa área que ainda intriga muitos cientistas da medicina, psicologia e a sociedade em geral.
 
 Em 2005, estratégias e métodos foram estabelecidos para estudar o ciclo menstrual e obter a classificação correta das fases do ciclo\cite{becker2005}. Essas estratégias e métodos utilizam de medidas hormonais, temperatura corporal basal(TCB) e avaliações baseadas em calendário. Como a concentração de estradiol e progesterona variam muito de mulher para mulher, utilizá-lo como medida única pode ser insuficiente para determinar individualmente a fase do ciclo \cite{poroma2014}.
 
@@ -18,7 +18,7 @@ Agora na fase lútea, a progesterona no estágio da ovulação é necessária pa
 
 O estradiol e a progesterona são altamente lipofílicos, ou seja, se dissolvem em gordura, óleos e lipídios em geral, e facilmente atravessam a barreira sangue-cérebro. Estudos em animais e estudos post-mortem em mulheres na idade reprodutiva e na menopausa indicaram que esses hormônios estavam acumulados no cérebro \cite{bixo1997}. Os receptores desses hormônios estão presentes em áreas cerebrais associadas à reprodução, função cognitiva e processamento emocional, como o hipotálamo e o sistema límbico \cite{gruber2002, brinton2008}.
 
- No estudo de \citeonline{poroma2014}, na parte de habilidade espacial visual, dos 23 autores estudados, cinco relataram uma melhora nas habilidades no início da fase folicular e três relataram uma melhora nas habilidades quando o estradiol estava baixo(fase folicular), o restante não relatou nenhum efeito da fase. Em tarefas verbais, dos 13 autores estudados, dois relataram uma melhora no meio da fase lútea, 1 relatou melhora em mulheres que utilizam anticoncepcional(AC) e dois relataram melhora no final da fase folicular e no final da fase lútea. No aspecto emocional, varios estudos relacionaram as fases com a habilidade de reconhecer emoçoes faciais. Um indicou uma melhor precisão no inicio e no fim da fase folicular \cite{dernl2013}, já vários outros indicaram uma piora na fase lútea, principalmente em reconhecer emoções negativas \cite{gasbarri2008}. Outro estudo também relacionou o aumento de hormônios do stress com a fase lútea \cite{kirschbaum1999}.
+ No estudo de \citeonline{poroma2014}, na parte de habilidade espacial visual, dos 23 autores estudados, cinco relataram uma melhora nas habilidades no início da fase folicular e três relataram uma melhora nas habilidades quando o estradiol estava baixo(fase folicular), o restante não relatou nenhum efeito da fase(colocar a citação desses artigos). Em tarefas verbais, dos 13 autores estudados, dois relataram uma melhora no meio da fase lútea, 1 relatou melhora em mulheres que utilizam anticoncepcional(AC) e dois relataram melhora no final da fase folicular e no final da fase lútea. No aspecto emocional, varios estudos relacionaram as fases com a habilidade de reconhecer emoçoes faciais. Um indicou uma melhor precisão no inicio e no fim da fase folicular \cite{dernl2013}, já vários outros indicaram uma piora na fase lútea, principalmente em reconhecer emoções negativas \cite{gasbarri2008}. Outro estudo também relacionou o aumento de hormônios do stress com a fase lútea \cite{kirschbaum1999}.
 
 Já nos aspectos emocionais e comportamental, no estudo de Rosa e Mainardes levantou-se que durante o período da semana que antece a menstruação e no período da menstruação, as mulheres entrevistadas relataram sentir uma maior alteração psicológica ou comportamental. Essas alterações variam entre variações de humor, irritabilidade, ansiedade entre outros.
 
