--- a/template-tcc1/editaveis/referencialteorico.tex
+++ b/template-tcc1/editaveis/referencialteorico.tex
@@ -2,7 +2,7 @@
 
 \section{Considerações Iniciais}
 
-Neste capítulo, são apresentadas as bases teóricas para a elaboração do aplicativo com o objetivo de facilitar o entedimento dos termos utilizados. O capítulo está estruturado em seções. Na seção 2.1 será descrito tudo sobre o ciclo menstrual feminino, na seção 2.2 será apresentado os conceitos da produtividade, como medi-la e como melhora-la, na seção 2.3 serão apresentados os possíveis perfis das mulheres com base no ciclo menstrual e na seção 2.4 será abordada o sistema de recomendação.
+Neste capítulo, são apresentadas as bases teóricas para a elaboração do aplicativo com o objetivo de facilitar o entedimento dos termos utilizados. O capítulo está estruturado em seções. Na seção 2.1 serão apresentados os conceitos sobre o ciclo menstrual feminino
 
 \section{O Ciclo Mentrual}
 
@@ -16,7 +16,7 @@ A fase folicular é a primeira fase do ciclo menstrual, começa com o inicio da 
 
 Essa é a fase responsável pelo desenvolvimento de folículos dos quais um será selecionado e se transformará em um óvulo(corpos lutem) e dará início a ovulação. Os folículos se desenvolvem em resposta ao aumento do hormônio folícul-estimulante (FSH)\lq\lq (Fig. \ref{fig01})  e assim que um deles é selecionado, o FSH diminui gradativamente e progressivamente a produção de estrogénios começão a aumentar. Os estrogénios produzidos pelo folículo em crescimento são responsáveis também pelo desenvolvimento do endométrio e essa fase é normalmente referido como fase folicular tardia.
 
-Normalmente, mulheres de 18 a 24 anos com ciclo de 28 dias tem a fase com o comprimento de 14 dias e mulheres de 40 a 44 anos tem de 10 dias \cite{lenton1984a}, o que indica a diminuição progressiva do tamanho da fase folicular com o avanço da idade. Em mulheres jovens, a diferença no tamanho do ciclo é normalmente provocada por ciclo mais curtos ou mais longos na fase folicular \cite{lenton1984a}. Ciclos inrregulares também costumam ser pela variação no tamanho da fase folicular, enquanto a fase lútea segue normalmente com tamanho fixo de 14 dias. Então, em um ciclo de 28 dias a fase folicular tem 14 dias e em um ciclo de 30 ele teria 16 dias.
+Normalmente, mulheres de 18 a 24 anos com ciclo de 28 dias tem a fase com o comprimento de 14 dias e mulheres de 40 a 44 anos tem de 10 dias \cite{lenton1984a}, o que indica a diminuição progressiva do tamanho da fase folicular com o avanço da idade. Em mulheres jovens, a diferença no tamanho do ciclo é normalmente provocada por ciclo mais curtos ou mais longos na fase folicular \cite{lenton1984a}. Ciclos inrregulares também costumam ser pela variação no tamanho da fase folicular, enquanto a fase lútea segue normalmente com tamanho fixo de 14 dias.
 
 \begin{figure}[h]
 	\centering
@@ -25,12 +25,12 @@ Normalmente, mulheres de 18 a 24 anos com ciclo de 28 dias tem a fase com o comp
         \label{fig01}
 \end{figure}
 
-Alguns estudos demonstraram que no domínio cognitivo, as funções verbais, espaciais e de memória variam ao longo do ciclo menstrual. Na fase folícular, ou quando há baixos níveis de estradiol, uma melhora no desempenho em tarefas espaciais foi relatada \cite{hausmann2000} e uma melhora nas habilidades verbais foi identificada no final da fase folicular quando há altos níveis de estradiol \cite{Rosenberg2002}. No aspecto emocional, alguns estudos relacionaram a fase com um aumento na habilidade de reconhecimento facial de emoçoes \cite{derntl2013}.
+Alguns estudos(que estudos?) demonstraram que no domínio cognitivo, as funções verbais, espaciais e de memória variam ao longo do ciclo menstrual. Na fase folícular, ou quando há baixos níveis de estradiol, uma melhora no desempenho em tarefas espaciais foi relatada \cite{hausmann2000} e uma melhora nas habilidades verbais foi identificada no final da fase folicular quando há altos níveis de estradiol \cite{Rosenberg2002}. No aspecto emocional, alguns estudos relacionaram a fase com um aumento na habilidade de reconhecimento facial de emoçoes \cite{derntl2013}.
 
 
 \subsubsection{Menstruação}
 
-A menstruação marca o início do ciclo menstrual e o fim do ciclo anterior e é caracterizada pelo fluxo sanguíneo vaginal. Ocorre quando não há fecundação no ciclo anterior e é composta por sangue e tecido uterino derivado da descamação das paredes internas do útero(endométrio). Normalmente dura cerca de 5 dias, mas pode variar demulher para mulherl\cite{guyton2012}.
+A menstruação marca o início do ciclo menstrual e o fim do ciclo anterior e é caracterizada pelo fluxo sanguíneo vaginal. Ocorre quando não há fecundação no ciclo anterior e é composta por sangue e tecido uterino derivado da descamação das paredes internas do útero(endométrio). Normalmente dura cerca de 5 dias, mas pode variar \cite{guyton2012}.
 
 O fluxo do sangramento também varia muito, mas costuma ser mais intenso nos primeiros dias. O fluxo menstrual pode ser leve, moderado ou intenso.
 
@@ -64,7 +64,7 @@ Apesar de na literatura sobre fertilidade, o método preferido para capturar a f
 
 Nesse método, uma contagem através do calendário é usada para determinar a fase do ciclo. O auto-relato do primeiro dia de menstruação é utilizado como ponto inicial do calendário e as fases são determinadas contando-se \lq \lq n\rq \rq  números de dias para frente ou de de trás para frente a partir da data de ínicio privestia para o próximo ciclo \cite{wideman2013}.
 
-O ciclo base utilizado é normalmente o de 28 dias e para representar eventos ovulatórios(próximo a altos níveis de estradiol, antes de um aumento significativo da progesterona) é contado 10 a 14 dias a partir do início do ciclo ou de 12 a 14 dias a partir do dia de previsão para início do próximo ciclo, mas enquanto os eventos ovulatórios ocorrem em média entre esses dias o momento real da ovulação pode variar significativamente a partir desta janela. O méio da fase lútea em que os hormônios ficam estábilizados normalmente é contado de 17 a 21 dias do início do ciclo ou de 7 a 9 dias a partir do final do ciclo \cite{wideman2013}. A \lq\lq Figura \ref{fig02}\rq\rq\ representa um ciclo de 28 dias.
+O ciclo base utilizado é normalmente o de 28 dias e para representar eventos ovulatórios(próximo a altos níveis de estradiol, antes de um aumento significativo da progesterona) é contado 10 a 14 dias a partir do início do ciclo ou de 12 a 14 dias a partir do dia de previsão para início do próximo ciclo, mas enquanto os eventos ovulatórios ocorrem em média entre esses dias o momento real da ovulação pode variar significativamente a partir desta janela. O meio da fase lútea, em que os hormônios ficam estábilizados normalmente é contado de 17 a 21 dias do início do ciclo ou de 7 a 9 dias a partir do final do ciclo \cite{wideman2013}. A \lq\lq Figura \ref{fig02}\rq\rq\ representa um ciclo de 28 dias.
 
 Como normalmente a diferença de tamanho dos ciclos se dá por um aumento no tamanho da fase folícular \cite{lenton1984a}, para ciclos maiores ou menores que 28 dias a ovulação é adiantada ou atrasada pela diferença entre o tamanho do ciclo e o ciclo base de 28 dias. Por exemplo, se for um ciclo de 32 dias, a ovulação provavelmente ocorrerá entre o 14 e 18 dia a partir do ínicio do ciclo.
 
@@ -85,7 +85,7 @@ Existem alguns outros fatores que provocam mudanças no ciclo menstrual natural 
 
 \section{Sistema de Recomendação}
 
-Os sistemas de recomendação(SR) tiveram início nos meados dos anos 90 quano os primeiros trabalhos sobre filragem colaborativa(FC) apareceram \cite{felferning2008} e evoluiu graças a academia que continuou desenvolvendo novas abordagens. Ainda é uma área de grande interesse por causa da grande quantidade de problemas que a envolve e por sua praticidade em lidar com o grande número de informação disponível na inernete \cite{adomavicius2005}. O SR veio ajudar os usuários a lidarem com esse execesso, fornecendo recomendações personalisadas baseadas na informações coletadas, equilibrando fatores como precisão, novidade, disperção e estabilidade\cite{bobadilla2013} .
+Os sistemas de recomendação(SR) tiveram início nos meados dos anos 90 quando os primeiros trabalhos sobre filragem colaborativa(FC) apareceram \cite{felferning2008} e evoluiu graças a academia que continuou desenvolvendo novas abordagens. Ainda é uma área de grande interesse por causa da grande quantidade de problemas que a envolve e por sua praticidade em lidar com o grande número de informação disponível na internet \cite{adomavicius2005}. O SR veio ajudar os usuários a lidarem com esse execesso, fornecendo recomendações personalisadas baseadas na informações coletadas, equilibrando fatores como precisão, novidade, disperção e estabilidade\cite{bobadilla2013} .
 
 Os SRs são implementados e possuem literatura para áreas de diferentes temas, como música, televisão, livros, documentos, elearning, e-comerce, aplicações em mercados, pesquisa na web e filmes. A maioria dos estudos estão focados para recomendação de filmes \cite{bobadilla2013}.
 
