change introduction and technologies

--- a/template-tcc1/bibliografia.bib
+++ b/template-tcc1/bibliografia.bib
@@ -14,6 +14,13 @@
 	Url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4241821/}
 }
 
+@article{rosa2016,
+	Author = {Thaniery Xavier Rosa and Sandra Cristina Catelan-Mainardes},
+	Title = {ALTERAÇÕES COMPORTAMENTAIS DURANTE O CICLO MENSTRUAL DA MULHER},
+	Year = {2016},
+	Url = {http://rdu.unicesumar.edu.br/bitstream/123456789/2926/1/thaniery_xavier_rosa_1.pdf}
+}
+
 @article{becker2005,
 	Author = {J. B. Becker and A. P. Arnold and J. K. Berkley and J. D. Blaustein and A. L. Eckel and E. Hampson and et al},
 	Title = { Strategies and methods for research on sex differences in brain and behavior},
@@ -33,6 +40,13 @@
 	Title = {Menstrual cycle length is an age-independent marker of female fertility: results from 6271 treatment cycles of in vitro fertilization},
 	Year = {2008},
 	Url = {https://www.ncbi.nlm.nih.gov/pubmed/18155201}
+}
+
+@article{phillips1992,
+	Author = {S. M. Phillips and B. B. Sherwin},
+	Title = {Variations in memory function and sex steroid hormones across the menstrual cycle.},
+	Year = {1992},
+	Url = {Psychoneuroendocrinology 17,497–506. doi: 10.1016/0306-4530(92)90008-U}
 }
 
 @book{fritz2010,
@@ -182,7 +196,77 @@ address = {USA},
 	Year = {2008},
 	Url = {https://journals-sagepub-com.ez54.periodicos.capes.gov.br/doi/full/10.1177/1941738112469930}
 }
- 
+
+@article{maki2002,
+	Author = {P. M. Make and J. B. Rich and R. S. Rosenbaum},
+	Title = {Implicit memory varies across the menstrual cycle: estrogen effects in young women},
+	Year = {2002},
+	Url = {Maki, P. M., Rich, J. B., and Rosenbaum, R. S. (2002). . Neuropsychologia 40, 518–529. doi: 10.1016/S0028-3932(01)00126-9}
+}
+
+@article{courvoisier2013,
+	Author = {D. S. Courvoisier and O. Renaud and C. Geiser and K. Paschke and K. Gaudy and K. Jordan},
+	Title = {Sex hormones and mental rotation: an intensive longitudinal investigation.},
+	Year = {2013},
+	Url = {Horm. Behav. 63, 345–351. doi: 10.1016/j.yhbeh.2012.12.007}
+}
+
+@article{hampson2014,
+	Author = {E. Hampson and N. Levy-Cooperman and J. M. Korman},
+	Title = {Estradiol and mental rotation: relation to dimensionality, difficulty, or angular disparity?},
+	Year = {2014},
+	Url = {Horm. Behav. 65, 238–248. doi: 10.1016/j.yhbeh.2013.12.016}
+}
+
+@article{becker1982,
+	Author = {D. Becker and O. D. Creutzfeldt and M. Schwibbe and W. Wuttke},
+	Title = {Changes in physiological, EEG and psychological parameters in women during the spontaneous menstrual cycle and following oral contraceptives.},
+	Year = {1982},
+	Url = {Psychoneuroendocrinology 7, 75–90. doi: 10.1016/0306-4530(82)90057-9}
+}
+
+@article{mordecai2008,
+	Author = {K. L. Mordecai and L. H. Rubin and P. M. Make},
+	Title = {Effects of menstrual cycle phase and oral contraceptive use on verbal memory},
+	Year = {2008},
+	Url = { Horm. Behav. 54, 286–293. doi: 10.1016/j.yhbeh.2008.03.006}
+}
+
+@article{solis2004,
+	Author = {S. Solis-Ortiz and M. A. Guevara and M. Corsi-Cabrera},
+	Title = {Performance in a test demanding prefrontal functions is favored by early luteal phase progesterone: an electroencephalographic study},
+	Year = {2004},
+	Url = {  Psychoneuroendocrinology 29, 1047–1057. doi:10.1016/j.psyneuen.2003.10.007}
+}
+
+@article{flutter2017,
+	Author = {Google},
+	Title = {Flutter},
+	Year = {2017},
+	Url = {https://flutter.dev/}
+}
+
+@article{firebase2011,
+	Author = {Google},
+	Title = {Firabase},
+	Year = {2011},
+	Url = {https://firebase.google.com/}
+}
+
+@article{trello2011,
+	Author = {Atlassian},
+	Title = {Trello},
+	Year = {2011},
+	Url = {https://trello.com/}
+}
+
+@article{zenhub2020,
+	Author = {ZenHub},
+	Title = {ZenHub},
+	Year = {2020},
+	Url = {https://www.zenhub.com/}
+}
+
 
 @book{ACOG2000,
 author = {ACOG},
