--- a/template-tcc1/editaveis/consideracoes.tex
+++ b/template-tcc1/editaveis/consideracoes.tex
@@ -4,15 +4,17 @@
 
 \subsection{Flutter}
 
-O Fluter é um kit de ferramenas de interface de usuário(UI) grátis e open-souce criado pela Google e lançado em 2017. Ele auxilia na criação de aplicaivos nativos para dispositivos mobile, web e desktop a partir de uma única base de código. Isso significa que é possível criar uma aplicação para diferentes sistemas operacionais(IOS e Android) utilizando um unico código.
+O Fluter é um kit de ferramenas de interface de usuário(UI) grátis e open-souce criado pela Google e lançado em 2017. Ele auxilia na criação de aplicaivos nativos para dispositivos mobile, web e desktop a partir de uma única base de código. Isso significa que é possível criar uma aplicação para diferentes sistemas operacionais(IOS e Android) utilizando um unico código \cite{flutter2017}.
 
-Ele é composto por um SDK(Software Development Kit) e um framework. O SDK é uma coleção de ferramentas que ajudam o desenvolvedor a desenvolver a aplicação e executá-la em plataformas específicas. Essas ferramentas incluem bibliotecas, documentação, exemplos de códigos, processos, guias, compiladores, entre outras coisas. Já o framework é uma coleção de elementos da UI que são reutilizaveis e podem ser personalizados para as necessidades expecíficas da aplicação
+Ele é composto por um SDK(Software Development Kit) e um framework. O SDK é uma coleção de ferramentas que ajudam o desenvolvedor a desenvolver a aplicação e executá-la em plataformas específicas. Essas ferramentas incluem bibliotecas, documentação, exemplos de códigos, processos, guias, compiladores, entre outras coisas. Já o framework é uma coleção de elementos da UI que são reutilizaveis e podem ser personalizados para as necessidades expecíficas da aplicação\cite{flutter2017}.
 
 \subsubsection{Dart}
 
-Dart é a linguagem de programação utilizada no flutter e também foi criada pela Google em 2011. É uma linguagem focada para desenvolvimento front-end e do tipo orientada a objeto.
+Dart é a linguagem de programação utilizada no flutter e também foi criada pela Google em 2011. É uma linguagem focada para desenvolvimento front-end e do tipo orientada a objeto\cite{flutter2017}.
 
 \subsubsection{Firebase}
+
+Firebase é uma plataforma desenvolvida pelo Google para a criação de aplicativos web e móveis. Era originalmente uma empresa independente fundada em 2011. Em 2014, o Google adquiriu a plataforma e agora é sua ferramenta principal para o desenvolvimento de aplicativos. O Firebase contêm funcionalidade como, análises, bancos de dados, mensagens e relatórios de erros, garantindo mais agilidade no desenvolvimento de aplicativos\cite{firebase2011}.
 
 \section{Engenharia de Software}
 
@@ -20,9 +22,12 @@ Dart é a linguagem de programação utilizada no flutter e também foi criada p
 
 \subsubsection{Trello}
 
-A ferramento Trello3 possibilita de modo fácil, gratuito e flexível o gerenciamento de projetos (TRELLO, 2017). O Trello auxilia no ganho de produtividade tanto por equipes grandes quanto de forma individual. Baseia-se no sistema de kanban4, bastante utilizado no desenvolvimento com Scrum, metodologia utilizada neste traballho (TRELLO,2017). O Trello foi utilizado para organizar as tarefas envolvidas durante a pesquisa, desenvolvimento e escrita deste trabalho.
+
+O Trello é uma aplicação web baseado no sistema Kanbam que auxilia no gerenciamento de tarefas para times grandes ou pessoas individuais. Originalmente criado pela Fog Creek Software em 2011 e vendida a Atlassian em 2017 \cite{trello2011}. O Trello foi utilizado para organizar as tarefas relacionadas a escrita do TCC e também para manter o registro dos artigos aqui utilizados.
 
 \subsubsection{ZenHub}
+O Zenhub é uma ferramenta semelhante ao Trello. É exclusiva para uso junto ao Github e é um poderosa ferramenta para rastreamento, planejamento e relatórios das features de projetos no GitHub. Ele é baseado nas metodologias ageis, como scrum, e é utilizado em projetos ágeis. Com ele é possível planejar roteiros, usar quadros de tarefas e gerar relatórios automatizados diretamente do repositório do GitHub \cite{zenhub2020}. Nesse projeto será utilizado para organizar as tarefas relacionadas ao desenvolvimento do aplicativo Mina.
+
 
 \subsubsection{Slack}
 
