--- a/template-tcc1/editaveis/introducao.tex
+++ b/template-tcc1/editaveis/introducao.tex
@@ -2,35 +2,36 @@
 
 \section{Contextualização}
 
-O ciclo menstrual feminino começou a ser pesquisado, cientificamente, na década de 1930 \cite{frank1931} e em 1973 Barbara Sommer revisou toda a lieratura existente e concluiu, naquela época, que não existia evidencias que a fase do ciclo menstrual influenciava em mudanças na cognição e performance motora por causa de problemas na metodolodia. Com o avanço da ciência e da medicina, métodos cada vez mais sofisicados e acessíveis para análise hormonal possibilitaram o avanço dos estudos nessa área que ainda intriga muitos cientistas da medicina, psicologia e a sociedade em geral.
+O ciclo menstrual feminino começou a ser pesquisado, cientificamente, na década de 1930 \cite{frank1931} e com o avanço da ciência e da medicina, métodos cada vez mais sofisicados e acessíveis para análise hormonal possibilitaram o avanço dos estudos nessa área que ainda intriga muitos cientistas da medicina, psicologia e a sociedade em geral.
 
-Em 2005, estratégias e métodos foram estabelecidos para estudar o ciclo menstrual e obter a classificação correta das fases do ciclo\cite{becker2005}. Essas estratégias e métodos utilizam de medidas hormonais, temperatura corporal basal(TCB) e avaliações baseadas em calendário. Como a concentração de estradiol e progesterona variam muito de mulher para mulher, utilizá-lo como medida única pode ser insuficiente para determinar individualmente a fase do ciclo \cite{poroma2014}.
+Em 2005, estratégias e métodos foram estabelecidos para estudar o ciclo menstrual e obter a classificação correta das fases do ciclo\cite{becker2005}. Essas estratégias e métodos utilizam de medidas hormonais, temperatura corporal basal(TCB) e avaliações baseadas em calendário. O ciclo menstrual idealizado tem 28 dias, mas pode variar entre 21 e 35 dias \cite{lenton1984a} e começa a ser contabilizado a partir do primeiro dia da menstruação. O ciclo é dividido principalmente em 2 fases, a fase folicular e a fase lútea \cite{brondin2008}.
 
-Tendo como teoria que os hormônios podem influênciar a vida das mulheres, muitos estudos têm sido realizados tentando determinar a influência da fase do ciclo menstrual na capacidade cognitiva, motora e emocional das mulheres. Em 2014, \citeonline{poroma2014} realizaram um levantamento da literatura existente que relacionam o ciclo reprodutivo feminino com as áreas de tarefas cognitivas como, habilidades espacial, visual, verbal, controle cognitivo, e aspectos emocionais.
+A fase folicular é contabilizada a partir do promeiro dia da menstruação até o dia de pico do hormônio luteinizante(LH), é caracterizada pelo desenvolvimento folicular, em resposta ao aumento do hormônio folículo-estimulante(FSH) que começa a ser produzido no início da fase e normalmente tem o comprimento de 14 dias, podendo ter variações dependendo da idade \cite{lenton1984a}. Em mulheres jovens a diferença no tamanho do ciclo é normalmente provocada por ciclo mais curtos ou mais longos na fase folicular \cite{lenton1984a}.
 
-O ciclo menstrual idealizado tem 28 dias, mas pode variar entre 21 e 35 dias \cite{lenton1984a} e começa a ser contabilizado a partir do primeiro dia da menstruação. O ciclo é dividido principalmente em 2 fases, a fase folicular e a fase lútea \cite{brondin2008}.
+Na fase folicular, um folículo é selecionado para ser tornar um óvulo e aumenta a produção do estradiol que faz surgir o LH e progesterona. O surgimento desses hormônios caracterizam clinicamente o ciclo ovulatório e o início da fase lútea \cite{fritz2010}. É nesse ciclo que ocorre o aumento da temperatura basal e o óvulo pode ser fecundado. 
 
-A fase folicular é contabilizada a partir do promeiro dia da menstruação até o dia de pico do hormônio luteinizante(LH). Há uma diminuição significativa do comprimento da fase folicular de acordo com a idade das mulheres. Normalmente mulheres de 18 a 24 anos tem a fase com o comprimento de 14 dias e mulheres de 40 a 44 anos tem de 10 dias \cite{lenton1984a}. Em mulheres jovens a diferença no tamanho do ciclo é normalmente provocada por ciclo mais curtos ou mais longos na fase folicular \cite{lenton1984a}.
-
-A fase folicular é caracterizada pelo desenvolvimento folicular, em resposta ao aumento do hormônio folículo-estimulante(FSH) que começa a ser produzido no início da fase. Quando um folículo é selecionado o FSH diminui gradativamente e progressivamente a produção de estradiol começa a aumentar. Quando o estradiol chega ao pico, 12 a 24 horas depois o LH surge e a ovulação ocorre tipicamente de 10 a 12h depois do surgimento do LH \cite{fritz2010}. Clinicamente é possível determinar o ciclo ovulatório pelo surgimento do LH e a secreção de progesterona da fase lútea \cite{fritz2010}, também é possível determiná-lo pelo aumento da temperatura basalcorporal. Na ovulação, o folículo se transforma num corpus luteum que é capaz de sintetizar estradiol e progesterona e está pronto para ser fecundado.
-
-Agora na fase lútea, a progesterona no estágio da ovulação é necessária para preparar o endométrio para a chegada do óvulo no caso de concepção, e o pico da progesterona se dá normalmente por volta do vigésimo primeiro dia do ciclo \cite{nikas2003}. Caso não haja fecundação, a progesterona decai progressivamente e causa novamente a menstruação, continuando assim o ciclo.
+Na fase lútea, a progesterona prepara o endométrio para a chegada do óvulo no caso de concepção. Caso não haja fecundação, a progesterona decai progressivamente e causa novamente a menstruação, continuando assim o ciclo \cite{nikas2003}.
 
 O estradiol e a progesterona são altamente lipofílicos, ou seja, se dissolvem em gordura, óleos e lipídios em geral, e facilmente atravessam a barreira sangue-cérebro. Estudos em animais e estudos post-mortem em mulheres na idade reprodutiva e na menopausa indicaram que esses hormônios estavam acumulados no cérebro \cite{bixo1997}. Os receptores desses hormônios estão presentes em áreas cerebrais associadas à reprodução, função cognitiva e processamento emocional, como o hipotálamo e o sistema límbico \cite{gruber2002, brinton2008}.
 
- No estudo de \citeonline{poroma2014}, na parte de habilidade espacial visual, dos 23 autores estudados, cinco relataram uma melhora nas habilidades no início da fase folicular e três relataram uma melhora nas habilidades quando o estradiol estava baixo(fase folicular), o restante não relatou nenhum efeito da fase(colocar a citação desses artigos). Em tarefas verbais, dos 13 autores estudados, dois relataram uma melhora no meio da fase lútea, 1 relatou melhora em mulheres que utilizam anticoncepcional(AC) e dois relataram melhora no final da fase folicular e no final da fase lútea. No aspecto emocional, varios estudos relacionaram as fases com a habilidade de reconhecer emoçoes faciais. Um indicou uma melhor precisão no inicio e no fim da fase folicular \cite{dernl2013}, já vários outros indicaram uma piora na fase lútea, principalmente em reconhecer emoções negativas \cite{gasbarri2008}. Outro estudo também relacionou o aumento de hormônios do stress com a fase lútea \cite{kirschbaum1999}.
+Tendo como teoria que os hormônios podem influênciar a vida das mulheres, muitos estudos têm sido realizados tentando determinar a influência da fase do ciclo menstrual na capacidade cognitiva, motora e emocional das mulheres. Em 2014, \citeonline{poroma2014} realizaram um levantamento da literatura existente que relacionam o ciclo reprodutivo feminino com as áreas de tarefas cognitivas como, habilidades espacial, visual, verbal, controle cognitivo, e aspectos emocionais.
 
-Já nos aspectos emocionais e comportamental, no estudo de Rosa e Mainardes levantou-se que durante o período da semana que antece a menstruação e no período da menstruação, as mulheres entrevistadas relataram sentir uma maior alteração psicológica ou comportamental. Essas alterações variam entre variações de humor, irritabilidade, ansiedade entre outros.
+No estudo de \citeonline{poroma2014}, na parte de habilidade espacial visual, cinco atores \cite{hausmann2000, maki2002, courvoisier2013, becker1982, phillips1992} relataram uma melhora nas habilidades no início da fase folicular e um relatarou melhora nas habilidades quando o estradiol estava baixo \cite{hampson2014}. 
+
+Em tarefas verbais, um autor \cite{maki2002}, relatarou melhora no meio da fase lútea, um relatou melhora em mulheres que utilizam anticoncepcional(AC) \cite{mordecai2008} e dois relataram melhora no final da fase folicular e no final da fase lútea\cite{Rosenberg2002, solis2004}.
+
+No aspecto emocional, varios estudos relacionaram as fases com a habilidade de reconhecer emoçoes faciais. Um indicou uma melhor precisão quando a progesterona estava alta, já vários outros indicaram uma piora na fase lútea, principalmente em reconhecer emoções negativas \cite{gasbarri2008}. Outro estudo também relacionou o aumento de hormônios do stress com a fase lútea \cite{kirschbaum1999}.
+
+Já nos aspectos emocionais e comportamental, no estudo de \citeonline{rosa2016} levantou-se que durante o período da semana que antece a menstruação e no período da menstruação, as mulheres entrevistadas relataram sentir uma maior alteração psicológica ou comportamental. Essas alterações variam entre variações de humor, irritabilidade, ansiedade entre outros. Essas alterações podem ser classificadas como transtorno disfórico pré-menstrual(TPM) \cite{ACOG2000}.
 
 Se existe essa influência das fases do ciclo menstrual na vida das mulheres, como então adiquirir o conhecimento do que é influênciado? porque adiquirir esse conhecimento seria importante? e como utilizar essa influência para benefício próprio?
 
 Para a mulher, adiquirir o conhecimento de que fase se está, como, em que e porque seu ciclo influência sua vida, aumentaria significativamente a sua inteligência emocional, já que ela é medida utilizando a \textit{Multifactor Emotional Intelligence Scale} (MEIS) que é composta por 3 habilidades emocionais distintas: perceber, entender e regular emoções. Em palavras gerais a inteligência emocional é \lq \lq A habilidade de monitorar os próprios sentimentos e emoçoes e de outros indivíduos, discriminar entre eles e usar essas informações para guiar o pensamento e ações \rq \rq \cite{salovey1990} e no estudo realizado por \citeonline{lam2002} ele relaciona o impacto da inteligência emocional com a performance individual e neste estudo o autor confirma a hipotese de que a inteligência emocional influencia no desempenho cognitivo individual, e que das três medidas, a percepção e regulação são as que mais influênciam para o aumento da inteligência emocional.
-  
 
-Tendo o conhecimento que vários autores afirmam existir uma influência do ciclo menstrual principalmente nas emoções e comportamentos, que existem levantamentos com grupos de mulheres que indicam tais relações e que entender e perceber impactam a inteligência emocional e a performance individual das pessoas, é possível então que exista alguma influência da fase do ciclo menstrual na performace individual das mulheres em algumas tarefas cotidianas? e se sim, como utilizá-la da melhor forma possível? 
+Esse estudo tem como teoria que o ciclo menstrual influência nas emoções e comportamentos das mulheres, portanto, em suas vidas e na realização de tarefas cotidianas. Utilizando pesquisas e a literatura existente que embase essa teoria o estudo propõe a realização de um aplicativo com um sistema de recomendação que dará indicações de tarefas cotidianas que seriam mais fáceis ou mais difíceis de serem realizadas, dependendo do perfil e da fase do ciclo menstrual que a mulher se encontra, além de levar informações sobre como a fase influencia. Esse conhecimento irá beneficiar a inteligencia emocional e consequentemente o desempenho cognitivo individual das mulheres.
 
-Esse estudo busca responder essas perguntas e propõe a realização de um aplicativo com  sistema de recomendação de caráter informativo, que dará, de acordo com o perfil e o ciclo menstrual individual de cada mulher, indicações de tarefas que seriam mais difíceis ou mais fáceis de serem realizadas no período do ciclo que a mulher se encontra e o porque disto.
- 
+O sistema de recomendação foi escolhido por causa da habilidade em lidar com execesso de informação, fornecendo recomendações personalisadas baseadas nas informações coletadas, equilibando fatores como precisão, novidade, disperção e estabilidade \cite{bobadilla2013}.
+
 A problemática será levantar os divesos tipos de perfis das mulheres de acordo com a fase do ciclo menstrual delas, descobrir se existe diferença entre mulheres que utilizam ou não métodos hormonais ou tem algum disturbio hormonal e como essas nuances influenciam as tarefas cotidianas delas. Além de conseguir determinar corretamente em qual fase do ciclo a mulher está apenas com o uso do método do calendário. Para isso, será utilizada a literatura existente sobre o assunto, pesquisas préviamente públicadas e pesquisas próprias, em formato de questionário, aplicadas a mulheres em idade reprodutiva.
 
 Tendo a consciência da delicadesa do assunto estudado, vale ressaltar que este estudo não tem como objetivo entrar na discução de diferença entre sexo, não conta com o acompanhamento de um profissional da saúde e é experimental, tendo como objetivo desenvolver um sistema que seja apenas um guia que facilite a vida das mulheres. 
@@ -89,3 +90,7 @@ Este trabalho de conclusão de curso está organizado nos seguintes capítulos:
         \item Capítulo 6 - Conclusão: apresenta a conclusão a cerca dos resultados alcançados, bem como os possíveis trabalhos futuros.
           
 \end{itemize}
+% Como a concentração de estradiol e progesterona variam muito de mulher para mulher, utilizá-lo como medida única pode ser insuficiente para determinar individualmente a fase do ciclo \cite{poroma2014}.
+% em 1973 Barbara Sommer revisou toda a lieratura existente e concluiu, naquela época, que não existia evidencias que a fase do ciclo menstrual influenciava em mudanças na cognição e performance motora por causa de problemas na metodolodia. Co
+%Há uma diminuição significativa do comprimento da fase folicular de acordo com a idade das mulheres. Normalmente mulheres de 18 a 24 anos tem a fase com o comprimento de 14 dias e mulheres de 40 a 44 anos tem de 10 dias }. 
+%A fase folicular Quando um folículo é selecionado o FSH diminui gradativamente e progressivamente a produção de estradiol começa a aumentar. Quando o estradiol chega ao pico, na fase folícular, 12 a 24 horas depois o LH surge e a ovulação ocorre tipicamente de 10 a 12h depois do surgimento do LH \cite{fritz2010}. Clinicamente é possível determinar o ciclo ovulatório pelo surgimento do LH e a secreção de progesterona da fase lútea \cite{fritz2010}, também é possível determiná-lo pelo aumento da temperatura basalcorporal. Na ovulação, o folículo se transforma num corpus luteum que é capaz de sintetizar estradiol e progesterona e está pronto para ser fecundado.
