finalizando suporte tecnologico e refatorando estrutura

--- a/template-tcc1/bibliografia.bib
+++ b/template-tcc1/bibliografia.bib
@@ -267,6 +267,61 @@ address = {USA},
 	Url = {https://www.zenhub.com/}
 }
 
+@article{slack2013,
+	Author = {Slack},
+	Title = {Slack},
+	Year = {2013},
+	Url = {https://slack.com/intl/pt-br/}
+}
+
+@article{vscode2015,
+	Author = {Visual Studio Code},
+	Title = {Visual Studio Code},
+	Year = {2015},
+	Url = {https://code.visualstudio.com/}
+}
+
+@article{lm2020,
+	Author = {Linux Mint},
+	Title = {Linux Mint},
+	Year = {2020},
+	Url = {https://linuxmint.com/}
+}
+
+@article{android2020,
+	Author = {Android Studio},
+	Title = {Android Studio},
+	Year = {2020},
+	Url = {https://developer.android.com/studio}
+}
+
+@article{git2020,
+	Author = {Git},
+	Title = {Git},
+	Year = {2020},
+	Url = {https://git-scm.com/}
+}
+
+@article{github2020,
+	Author = {GitHub},
+	Title = {GitHub},
+	Year = {2020},
+	Url = {https://github.com/}
+}
+
+@article{latex2020,
+	Author = {Latex},
+	Title = {Latex},
+	Year = {2020},
+	Url = {https://www.latex-project.org/}
+}
+
+@article{figma2020,
+	Author = {Figma},
+	Title = {Figma},
+	Year = {2020},
+	Url = {https://www.figma.com/}
+}
 
 @book{ACOG2000,
 author = {ACOG},
