--- a/template-tcc1/editaveis/introducao.tex
+++ b/template-tcc1/editaveis/introducao.tex
@@ -1,4 +1,5 @@
-\chapter[Introdução]{Introdução}
+\chapter*[Introdução]{Introdução}
+\addcontentsline{toc}{chapter}{Introdução}
 
 \section{Contextualização}
 
@@ -34,7 +35,7 @@ O sistema de recomendação foi escolhido por causa da habilidade em lidar com e
 
 A problemática será levantar os divesos tipos de perfis das mulheres de acordo com a fase do ciclo menstrual delas, descobrir se existe diferença entre mulheres que utilizam ou não métodos hormonais ou tem algum disturbio hormonal e como essas nuances influenciam as tarefas cotidianas delas. Além de conseguir determinar corretamente em qual fase do ciclo a mulher está apenas com o uso do método do calendário. Para isso, será utilizada a literatura existente sobre o assunto, pesquisas préviamente públicadas e pesquisas próprias, em formato de questionário, aplicadas a mulheres em idade reprodutiva.
 
-Tendo a consciência da delicadesa do assunto estudado, vale ressaltar que este estudo não tem como objetivo entrar na discução de diferença entre sexo, não conta com o acompanhamento de um profissional da saúde e é experimental, tendo como objetivo desenvolver um sistema que seja apenas um guia que facilite a vida das mulheres. 
+Tendo a consciência da delicadesa do assunto estudado, vale ressaltar que este estudo não tem como objetivo entrar na discução de diferença entre sexo, não conta com o acompanhamento de um profissional da saúde e é um estudo de caso, tendo como objetivo desenvolver um sistema que seja apenas um guia que facilite a vida das mulheres. 
 
 \section{Justificativa}
 
