--- a/template-tcc1/tcc.tex
+++ b/template-tcc1/tcc.tex
@@ -29,10 +29,13 @@
 
 \input{editaveis/introducao}
 \input{editaveis/referencialteorico}
-\input{editaveis/consideracoes}
-\input{editaveis/textoepostexto}
-\input{editaveis/elementosdotexto}
-\input{editaveis/elementosdopostexto}
+\input{editaveis/suporteTecnologico}
+\input{editaveis/metodologia}
+\input{editaveis/proposta}
+%\input{editaveis/consideracoes}
+%\input{editaveis/textoepostexto}
+%\input{editaveis/elementosdotexto}
+%\input{editaveis/elementosdopostexto}
 
 \bookmarksetup{startatroot} 
 
